[project]
name = "enochecker3"
version = "0.13.4"
authors = [
	{ name = "Louis Burda", email = "dev@sinitax.com" },
	{ name = "Lucas Drushke", email = "ldruschk@posteo.de" }
]
description = "Library for building EnoEngine-compatible async checkers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.115.6,<0.116.0",
	"gunicorn==23.0.0",
	"httpx>=0.28.0,<0.29.0",
	"pymongo>=4.0.0,<5.0.0",
	"uvicorn>=0.34.0,<0.35.0",
	"enochecker-core"
]

[dependency-groups]
dev = [
	"ruff>=0.12.10",
	"coverage>=7.10.5",
	"pytest>=8.4.1",
	"pytest-asyncio>=1.1.0",
	"mypy>=1.17.1",
]

[tool.ruff.lint]
ignore = ["E731", "E722"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = []

[tool.setuptools.package-data]
"enochecker3" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -rP"
testpaths = [
	"tests"
]

[tool.uv.sources]
enochecker-core = { git = "https://github.com/attacking-lab/enochecker-core", rev = "v0.13.0" }
